update classes